# omagent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  domain-packs.md  getting-started.md  skills.md  tools.md
omagent/cli/: main.py  repl.py  replay.py
omagent/cli/tui/: app.py  styles.tcss
omagent/cli/tui/widgets/: activity_log.py  chat_view.py  input_area.py  message_card.py  sidebar.py  splash.py  status_bar.py  thinking_indicator.py  tool_card.py
omagent/core/: config.py  events.py  hooks.py  journal.py  loop.py  memory.py  orchestrator.py  permissions.py  planner.py  registry.py  session.py  skill_loader.py  tracker.py  workspace.py
omagent/mcp/: __init__.py  bridge.py  client.py  manager.py
omagent/packs/: loader.py
omagent/packs/data_science/: pack.yaml
omagent/packs/data_science/skills/: cleaning.md  (+2 more)
omagent/packs/default/: pack.yaml
omagent/packs/flutter_dev/: pack.yaml
omagent/packs/software_dev/: pack.yaml
omagent/providers/: litellm_provider.py
omagent/server/: app.py  auth.py  routes.py  ws.py
omagent/tools/: base.py
omagent/tools/builtin/: __init__.py  _path_guard.py  bash.py  delegate.py  list_dir.py  read_file.py  remember.py  skill_tool.py  summarize.py  write_file.py
tests/: test_auth.py  test_journal.py  test_loop.py  test_memory.py  test_orchestrator.py  test_packs.py  test_planner.py  test_registry.py  test_server.py  test_session.py  test_session_advanced.py  test_skill_loader.py  test_software_dev.py  test_tracker.py  test_workspace.py
(+55 files in other folders)
